<?xml version="1.0"?>
<package format="2">
  <name>ply_ros_publisher</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf</build_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>

</package>
